result sort done

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.select-hover:hover .clear-icon {
+  @apply inline-block bg-default-200 transition-colors duration-[10ms];
+}
